kubernetes/apps/k8s/security/oauth2-proxy/app/ingress.yaml
apiVersion: networking.${ENVIRONMENT}.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: security
spec:
  ingressClassName: nginx
  rules:
  - host: "oauth.nucstack.com"
    http:
      paths:
      - backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - "oauth.nucstack.com"
